--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
+  <script src="js/backend.js"></script>
   <script src="js/util.js"></script>
   <script src="js/data.js"></script>
   <script src="js/ad.js"></script>
