--- a/index.html
+++ b/index.html
@@ -249,12 +249,8 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src="js/backend.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/data.js"></script>
-  <script src="js/pin.js"></script>
-  <script src="js/map.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/filter.js"></script>
+  
+  <script src="js/bundle.js"></script>
+
 </body>
 </html>
